# nexus-gateway

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile.gateway  Dockerfile.mockbos  LICENSE  MVP_READINESS.md  Makefile  NOTICE  README.ja.md  README.md  SECURITY.md  buf.gen.yaml  docker-compose.bacnet.yml  docker-compose.external-keycloak.yml  docker-compose.integration.yml  docker-compose.opcua-simgw.yml  docker-compose.opcua.yml  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
admin-ui/: .env.example  .gitignore  Dockerfile  middleware.ts  next-env.d.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
connector/bacnet/: Dockerfile  Dockerfile.sim-multi  pyproject.toml
connector/bacnet/bacnet_connector/: bacnet_client.py  command.py  config.py  connector.py  event.py  main.py  write_handler.py
connector/bacnet/sim/: device.py  device_1000.py
connector/bacnet/tests/: __init__.py  test_bacnet_client.py  test_connector.py  test_write_handler.py
docs/: background.ja.md  background.md  connector-spec.md  e2e-test-overview.md  evaluation-plan.ja.md  evaluation-plan.md  getting-started.ja.md  getting-started.md  nexus-gateway-report.html  oss-release-plan.md
fixtures/: catalog.json  point_list.json  point_list_opcua_simgw.json
integration/: bacnet_e2e_test.go  bos_egress_e2e_test.go  bos_ingest_api_e2e_test.go  bos_ingress_e2e_test.go  bos_reporting_e2e_test.go  control_e2e_test.go  control_test.go  creds_test.go  dual_bos_addr_test.go  opcua_e2e_test.go  (+4 more)
(+208 files in other folders)
